:sparkles: : 점수를 입력받아서 조건에 해당하는 값을 연산하는 로직 구현 & 출력