@@ -58,28 +58,36 @@ public class StudentList {
 
     public Student getStudentByStudentId(int studentId) {
         return students.stream()
-            .filter(student -> student.getStudentId() == studentId)
-            .findFirst()
-            .orElseThrow(IllegalArgumentException::new);
+                .filter(student -> student.getStudentId() == studentId)
+                .findFirst()
+                .orElseThrow(IllegalArgumentException::new);
     }
 
-    public List<Student> getStudentBySpecificState(State state){
-        return students.stream().filter(e -> e.getState() == state).collect(Collectors.toList());
+    public List<Student> getStudentBySpecificState(State state) {
+        // 1. 상태로 필터링
+        // 2. 각 학생마다 과목에서 필수과목만 필터링
+        return students.stream().filter(e -> e.getState() == state)
+                .filter(e -> e.getSubject().stream()
+                        .anyMatch(i -> i.getSubjectCategory() == SubjectCategory.REQUIRE)).toList();
     }
 
     public int validateStudentsId(int studentId) { // return int
         boolean validate = students.stream()
-            .anyMatch(student -> student.getStudentId() == studentId);
+                .anyMatch(student -> student.getStudentId() == studentId);
         if (validate) {
             return studentId;
         }
         throw new IllegalArgumentException();
     }
 
+    public boolean checkStudentScoreIsEmpty() {
+        return students.get(0).getScores().isEmpty();
+    }
+
     // 학생 정보 가져오기
     public Student bringStudent(int id) {
         return students.stream().filter(student -> student.getStudentId() == id).findFirst()
-            .orElseThrow(() -> new IllegalArgumentException());
+                .orElseThrow(() -> new IllegalArgumentException());
     }
 
 
